--- a/docs/milp-approach.org
+++ b/docs/milp-approach.org
@@ -343,13 +343,16 @@ in [[eq:constraints]].
 #+BEGIN_EXPORT latex
 \begin{equation}
 \begin{array}{ll}
-(u_i \geq d_j \text{ or } u_j \geq d_i) \text{ and } v_i = v_j           & Valid queue position/time
-\Delta_i = \delta_i(a_{\xi_i} - d_i)                                     & Calculate discharge of bus during route
-\eta_{\xi_i} = \eta_i + \text{ConsumptionCost}(v_i, a_i, e_i) - \Delta_i & Charge constraint
-\kappa_i \geq \eta_i + \text{ConsumptionCost}(v_i, a_i, e_i)             & Ensure the bus is not charged over its maximum capacity
-a_i \leq u_i \leq (T-s_i)                                                & Arrival time < initial charge time < maximum initial charge time
-d_i \leq e_i                                                             & Detach time should be less than or equal to departure
-s_i = d_i - u_i                                                          & Time spent on charger is equal to the difference of the attach and detach time
+d_j - u_i < \simga_i^1                                                   & \text{Valid queue position/time} \\
+u_j - d_i < \sigma_i^2                                                   & \text{Valid queue position/time} \\
+v_i - v_j = \sigma_i^3                                                   & \text{Valid queue position/time} \\
+\sigma_i^1 + \sigma_i^2 + \sigma_i^3 \geq 0                              & \text{Valid queue position/time} \\
+\Delta_i = \delta_i(a_{\xi_i} - d_i)                                     & \text{Calculate discharge of bus during route} \\
+\eta_{\xi_i} = \eta_i + \text{ConsumptionCost}(v_i, a_i, e_i) - \Delta_i & \text{Charge constraint} \\
+\kappa_i \geq \eta_i + \text{ConsumptionCost}(v_i, a_i, e_i)             & \text{Ensure the bus is not charged over its maximum capacity} \\
+a_i \leq u_i \leq (T-s_i)                                                & \text{Arrival time $<$ initial charge time $<$ maximum initial charge time} \\
+d_i \leq e_i                                                             & \text{Detach time should be less than or equal to departure} \\
+s_i = d_i - u_i                                                          & \text{Time spent on charger is equal to the difference of the attach and detach time} \\
 \end{array}
 \end{equation}
 #+END_EXPORT
